# cluster

./: .ansible-lint  .gitattributes  .gitignore  .gitleaks.toml  .jscpd.json  .markdownlint-cli2.yaml  .prettierignore  .release-please-manifest.json  .shellcheckrc  .trivyignore  .trivyignore.yaml  .yamllint.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  NOTICE  PLAN.md  README.md  SAFEGUARDS.md  SECURITY.md  STATUS.md  cluster  commitlint.config.js  lefthook.yml  lychee.toml  nestor.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench-freshness.yml  ci.yml  codeql.yml  conventions-freshness.yml  docs.yml  release.yml  resign-releases.yml  scorecard.yml
apps/: README.md
apps/redcap/: README.md  db-config.example.yaml  db-secret.example.yaml  mariadb.yaml  namespace.yaml  redcap.yaml
apps/rstudio/: README.md  deployment.yaml  namespace.yaml  persistent-volume-claim.yaml
bench/lima/: README.md  RESULTS.md  access.sh  gitea-init.sh  lib.sh  metrology.sh  rollback-lib.sh  run-phases.sh  runs-history.yaml  ui-assert.sh
bench/scenarios/: 20-chaos-kill-pods.sh  27-gitops-workflow-deploy.sh  28-ui-reachable.sh  29-codelocation-externe.sh  31-contract-endpoints.sh  32-portal.sh  33-cache-cnpg.sh  34-build-gitops-digest.sh  35-cicd-build-image.sh  36-livraison-atlas-deploy.sh  README.md  lib.sh  run-all.sh
bench/unit/: access.bats  audit-log-guard.bats  metrology.bats  rollback.bats  ui-assert.bats
bootstrap/: README.md  RUNBOOK.md  ansible.cfg  audit-log-baseline.yaml  buildkit.yaml  ceph-checks.yaml  ceph-cluster.yaml  ceph-datalake.yaml  ceph-storageclasses.yaml  checks.yaml  citation.yaml  cni.sh  cnpg-secrets.yaml  code-location-build.yaml  control-planes.yaml  cri.yaml  dataops.yaml  etcd-backup.yaml  etcd-fetch.yaml  eventful-mirror.yaml  eventful.yaml  first-access.sh  gitea-runner.yaml  gitops.yaml  hosts.example.yaml  hosts.yaml  initialisation.yaml  join-control-plane.yaml  join-workers.yaml  k8s-upgrade.yaml  kube-vip.yaml  kubeadm.yaml  local-path.yaml  metrics-server.yaml  mlflow.yaml  monitoring.yaml  os-upgrade.yaml  portal.yaml  redcap.yaml  registry.yaml  (+6 more)
bootstrap/group_vars/: all.yaml  control_host.yaml  dataops.example.yaml
bootstrap/lib/: health-classify.sh  ssh-report.sh  state-classify.sh
bootstrap/security/: .env-example  CHANGELOG.md  IMPLICATIONS.md  README.md  blur_env.py  report.sh  secure.yml  upgrade.yml
cluster_topology/: __init__.py  bootstrap.py  epreuves.py  facts.py  gates.py  generator.py  ha.py  history.py  isolation.py  layers.py  model.py  plan.py  profile.py  refresh.py  roundtrip.py  runner.py  scaffold.py  scale.py
cluster_topology/templates/: inventory-lima.yaml.j2
contract/: README.md  atlas.env.cluster.example  code-location.manifest.example.yaml  endpoints.example.yaml  namespaces-secrets.example.yaml  storage-classes.example.yaml
docs/: README.md  astro.config.mjs  banc-local.md  composants.md  demarrage.md  dev-atlas.md  glossaire.md  guide-dev-data.md  manifeste.md  outils.md  preuves.md  se-brancher.md
docs/.vitepress/: config.mjs
docs/architecture/: README.md  bonnes-pratiques.md  chaine-build-evenementiel.md  chaine-dataops.md  decisions-conventions-outillage.md  decisions-plan-de-controle.md  decisions-plateforme-gitops.md  decisions-securite-acces.md  decisions-stockage.md  exposition-reseau.md  lecons-des-runs.md  matrice-catalogue.md  plan-de-tests.md  registre-drifts.md  registre-drifts.yaml  validation-banc.md
docs/audit/: 02-tests.md  03-lint-format.md  05-reproductibilite.md  06-securite.md  07-gouvernance.md  08-operabilite.md  12-plan-action.md  2026-06-13-verification-aretes-stockage.md  2026-06-13-verification-graphe-atomique.md  2026-06-15-audit-cncf-kyverno.md  2026-06-16-audit-notations-cyber.md  2026-06-19-kubescape-nsa.md  2026-06-20-documentation.md  2026-06-22-best-practices-badge-answer-sheet.md  2026-06-22-best-practices-silver-gold-faisabilite.md  2026-06-24-audit-prod-dirqual.md  2026-06-30-audit-portabilite.md  2026-07-04-audit-ressources-requests-limits.md  2026-07-05-aval-citation-bugs-config-prod.md  README.md  (+12 more)
nestor/: __init__.py  access.py  bootstrap.py  discover.py  epreuves.py  errors.py  gates.py  generator.py  graph.py  ha_probes.py  history.py  isolation.py  kube_context.py  kubeconfig.py  layers.py  metrics.py  model.py  ownership.py  path.py  phases.py  plan.py  portal.py  portal_server.py  prod_target.py  profile.py  refresh_fuse.py  roundtrip.py  runner.py  runrecord.py  scaffold.py  seed.py
platform/: README.md  hardware.md
scripts/: audit-image-digests.sh  check_audit_log_gate.py  check_code_location_manifest.py  check_contract.py  check_gouvernance.py  check_md_orphans.py  check_topology.py  cluster-exec  migrate_docs_to_astro.py  render_drifts.py  topology.py
test/: README.md  RESULTS.md  prune.sh
tests/: test_access.py  test_blur_env.py  test_bootstrap.py  test_check_audit_log_gate.py  test_check_code_location_manifest.py  test_check_contract.py  test_check_gouvernance.py  test_check_md_orphans.py  test_check_topology.py  test_cluster_topology.py  test_discover.py  test_epreuves.py  test_facade.py  test_facts.py  test_gates.py  test_graph.py  test_ha.py  test_ha_path.py  test_ha_probes.py  test_history.py  test_isolation.py  test_kube_context.py  test_kubeconfig.py  test_layers.py  test_migrate_docs.py  test_ownership.py  test_parity.py  test_path.py  test_phases.py  test_plan.py  test_portal.py  test_prod_target.py  test_refresh.py  test_refresh_fuse.py  test_render_drifts.py  test_roundtrip.py  test_runner.py  test_runrecord.py  test_scaffold.py  test_scale.py  (+3 more)
topologies/: banc.example.yaml  banc.yaml  ceph.example.yaml  cicd.example.yaml  dirqual.example.yaml  gateway-public.example.yaml  ha-3cp.example.yaml  hostport.example.yaml  layers.example.yaml  local.example.yaml  socle.example.yaml
(+517 files in other folders)
