# Outillage Python du dépôt — scripts de logique/données (ADR 0017 amendé).
#
# Ce dépôt est un catalogue d'infra : pas un paquet Python distribuable, mais un
# socle de scripts outillés. uv gère l'environnement (uv.lock committé,
# reproductible — esprit ADR 0006) ; ruff lint + formate (intégré à `pnpm lint`
# via `lint:python`, et en CI). Versions pinnées : voir ADR 0006.

[project]
name = "cluster-tooling"
version = "0.0.0"
description = "Scripts outillage du dépôt cluster (Python ; ADR 0017)"
requires-python = ">=3.12"
# Dépendances runtime — uv.lock épingle les versions (esprit ADR 0006) :
#   pyyaml     : parsing YAML multi-doc du garde-fou contrat→platform
#                (check_contract.py, ADR 0043).
#   kubernetes : client Python exigé par la collection Ansible kubernetes.core
#                (modules k8s/k8s_info des plays plateforme) ; certifi fournit le
#                bundle CA HTTPS. Versionnés ICI (et non plus posés au coup par
#                coup par la pré-tâche `pip`) pour que `uv sync` provisionne un
#                contrôleur reproductible — banc ET prod, y compris sur un macOS
#                « externally-managed » où le `pip` système échoue (#277).
dependencies = [
    "pyyaml>=6,<7",
    "kubernetes>=31,<37",
    "certifi",
]

[dependency-groups]
dev = [
    "ruff==0.15.16",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# Code JETABLE de validation e2e (harnais #148, pas du code de production) —
# exclu du lint comme les manifestes vendored le sont de prettier/yamllint
# (CLAUDE.md). À retirer si ce code est repris en production (Phase 2+).
extend-exclude = ["platform/dagster/image-openlineage/toy_assets.py"]

[tool.ruff.lint]
# E/F = erreurs + pyflakes ; I = imports triés ; UP = modernisation ;
# B = bugbear ; SIM = simplifications.
select = ["E", "F", "I", "UP", "B", "SIM"]
