# Outillage Python du dépôt — scripts de logique/données (ADR 0017 amendé).
#
# Ce dépôt est un catalogue d'infra : pas un paquet Python distribuable, mais un
# socle de scripts outillés. uv gère l'environnement (uv.lock committé,
# reproductible — esprit ADR 0006) ; ruff lint + formate (intégré à `pnpm lint`
# via `lint:python`, et en CI). Versions pinnées : voir ADR 0006.

[project]
name = "cluster-tooling"
version = "0.0.0"
description = "Scripts outillage du dépôt cluster (Python ; ADR 0017)"
requires-python = ">=3.12"
# Dépendances runtime — uv.lock épingle les versions (esprit ADR 0006) :
#   pyyaml     : parsing YAML multi-doc du garde-fou contrat→platform
#                (check_contract.py, ADR 0043).
#   kubernetes : client Python exigé par la collection Ansible kubernetes.core
#                (modules k8s/k8s_info des plays plateforme) ; certifi fournit le
#                bundle CA HTTPS. Versionnés ICI (et non plus posés au coup par
#                coup par la pré-tâche `pip`) pour que `uv sync` provisionne un
#                contrôleur reproductible — banc ET prod, y compris sur un macOS
#                « externally-managed » où le `pip` système échoue (#277).
#   jinja2     : moteur de rendu de l'outil déclaratif `nestor` (ADR
#                0056) — le générateur rend l'inventaire/les group_vars depuis
#                topology.yaml via des templates Jinja2 (même moteur qu'Ansible,
#                zéro coût de diversité, ADR 0049/0061). Adoption posture ADR 0061.
#   ansible-runner : pilote les playbooks bootstrap/*.yaml depuis Python avec
#                des résultats structurés (rc, status, events) pour la boucle P5
#                « suggère → lance » (ADR 0063). Lib officielle d'Ansible —
#                écarte le subprocess+parse fragile que l'ADR 0056 combat ; seul
#                nestor/runner.py l'importe (couche d'exécution isolée).
dependencies = [
    "pyyaml>=6,<7",
    "kubernetes>=31,<37",
    "certifi",
    "jinja2>=3,<4",
    "ansible-runner>=2,<3",
]

[dependency-groups]
dev = [
    "ruff==0.15.16",
    # Property-based testing des fonctions pures de nestor (ADR 0087) — génère
    # des entrées variées + réduit les contre-exemples. Intégré à unittest via
    # @given (pas de bascule pytest). Dev seulement : zéro impact runtime.
    "hypothesis>=6,<7",
    # Mesure de couverture du moteur déclaratif `nestor` — câblée en CI avec un
    # plancher (`--fail-under`) pour que le chiffre affiché au README soit un
    # état VRAI recalculé à chaque PR (doctrine badges ADR 0080), jamais une
    # valeur figée qui dérive. Dev seulement : zéro impact runtime.
    "coverage>=7,<8",
]

[tool.coverage.run]
source = ["nestor"]
branch = false

[tool.coverage.report]
# Plancher de couverture du moteur `nestor` : la suite tombe sous ce seuil → CI
# rouge. Relevé prudemment au-dessus du palier mesuré pour interdire la
# régression sans bloquer une PR qui ajoute du code testé plus tard (ADR 0080).
fail_under = 90
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
# Code JETABLE de validation e2e (harnais #148, pas du code de production) —
# exclu du lint comme les manifestes vendored le sont de prettier/yamllint
# (CLAUDE.md). À retirer si ce code est repris en production (Phase 2+).
extend-exclude = ["platform/dagster/image-openlineage/toy_assets.py"]

[tool.ruff.lint]
# E/F = erreurs + pyflakes ; I = imports triés ; UP = modernisation ;
# B = bugbear ; SIM = simplifications.
select = ["E", "F", "I", "UP", "B", "SIM"]
